--- a/css/style.css
+++ b/css/style.css
@@ -527,7 +527,7 @@ footer .footer-icons a{
     #intro .bottom-left-gradient{
         position: absolute;
         z-index: -999;
-        left: -12%;
+        left: -22%;
         width: 200px;
         height: 200px;
         border-radius: 50%;
@@ -546,7 +546,7 @@ footer .footer-icons a{
     }
 
     #intro .intro-right img{
-        width: 380px;
+        width: 280px;
     }
 
 
@@ -597,7 +597,11 @@ footer .footer-icons a{
    }
 
    #about .about-right p{
-    font-size: 16px !important;
+    font-size: 16px;
+    max-width: 80%;
+    display: inline-block;
+    
+
    }
 
    #about .about-right a{
@@ -609,7 +613,7 @@ footer .footer-icons a{
        position: absolute;
        z-index: -999;
        top: 62%;
-       right: -5%;
+       right: -15%;
        width: 200px;
        height: 200px;
        border-radius: 50%;
